# TensorWall

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  mkdocs.yml
.github/workflows/: ci.yml
backend/: .env.example  .env.production.example  Dockerfile  __init__.py  alembic.ini  main.py  pyproject.toml  requirements.txt
backend/adapters/: __init__.py
backend/alembic/: env.py
backend/api/: __init__.py  auth.py  health.py
backend/application/: __init__.py  factory.py
backend/cli/: __init__.py  __main__.py  main.py
backend/config/: default_models.json
backend/core/: __init__.py  auth.py  base.py  config.py  contracts.py  decisions.py  dry_run.py  environments.py  failsafe.py  features.py  input_validation.py  jwt.py  jwt_auth.py  rbac.py  retention.py
backend/db/: __init__.py  models.py  session.py
backend/domain/: __init__.py  budget.py  (+2 more)
docs/: API_REFERENCE.md  CLI_REFERENCE.md  DEVELOPMENT.md  INSTALLATION.md  PRODUCTION.md  SECURITY.md  contributing.md  index.md
examples/: demo_security.py  quickstart.ipynb
frontend/: .env.example  .env.production.example  Dockerfile  next.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo  vercel.json
huggingface-space/: Caddyfile  Dockerfile  start.sh
scripts/: capture-screenshots.ts  seed_demo_data.py
sdk/: README.md  pyproject.toml
sdk-java/: README.md  pom.xml
sdk-python/: README.md  pyproject.toml
sdk/examples/: async_usage.py  basic_usage.py  streaming.py
sdk/llm_gateway_sdk/: __init__.py  client.py  exceptions.py
sdk/tests/: test_client.py
(+263 files in other folders)
